--- a/portfolio.html
+++ b/portfolio.html
@@ -336,6 +336,20 @@
             </li>
           </ul>
         </div>
+           <div class="box3">
+    <form class="footer-form" autocomplete="on">
+    <p class="footer-text">Підпишіться на розсилку</p>
+    <label for="user-email"></label>
+    <div class="footer-field">
+    <input class="user-email" id="user-email" type="email" name="user-email" placeholder="E-mail">
+     <button type="button" class="button footer-button">
+Підписатися
+<svg class="button-icon" width="24" height="24">
+  <use href="./img/icons.svg#icon-icon-send"></use>
+</svg>
+</button>
+</div>
+</div>
       </div>
       <div class="test"></div>
     </footer>
